# O2T

./: .gitignore  AGENTS.md  CHEATSHEET.md  CITATION.cff  CMakeLists.txt  LICENSE  NOTICE  README.md  SOURCES.md  pyproject.toml
compilerverif/: __init__.py
constraints/: extended_identities.json  formal_templates.json  guard_semantics.json  lift_rules.json  llvm_idioms.json  marker_config_map.json  negative_intents.json  optimization_intents.json  pass_constraints.json  semantic_facts.json  vector_inference_templates.json
docs/: README.md  agent.md  architecture.md  arxiv-outline.md  claim-fixture-map.md  e1-coverage.md  e2-mutation.md  e3-timing.md  e4-robustness.md  e5-case-studies.md  e6-passir-corpus.md  e7-ablation.md  instrumenting_llvm_passes.md  llvm_transform_verification_ledger.md  maturity.md  o2t-design.md  orchestrator.md  paper-draft.md  pass-ir.md  real_instcombine_coverage.md  roadmap-vocabulary-strata.md  symexec_real_pass.md  verification-flow.md
examples/: add_zero.cfg  composed_diamond_mem_loop.cfg  composed_loop_vector_reduce.cfg  composed_noalias_pointers.cfg  counted_loop.cfg  dead_body_loop.cfg  dead_store.cfg  early_exit_loop.cfg  invariant_loop.cfg  nested_diamond.cfg  overwritten_store.cfg  overwritten_store_symbolic_width1.cfg  overwritten_store_symbolic_width4.cfg  overwritten_store_symbolic_width8.cfg  partial_overwritten_store.cfg  partial_overwritten_store_high.cfg  partial_overwritten_store_sparse.cfg  partial_overwritten_store_sparse_triple.cfg  partial_overwritten_store_width2.cfg  partial_overwritten_store_width3.cfg  (+21 more)
(+767 files in other folders)
